<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none" android:id="@+id/grupoadmi1">
        <item
            android:id="@+id/nav_consultar"
            android:icon="@drawable/ic_menu_consultar"
            android:title="@string/menu_consultar" />
        <item
            android:id="@+id/nav_ver"
            android:icon="@drawable/ic_menu_ver"
            android:title="@string/menu_ver" />
    </group>

    <group android:id="@+id/grupoadmi2">

        <item
            android:id="@+id/nav_cerrar_admi"
            android:icon="@drawable/ic_menu_cerrar"
            android:title="@string/menu_cerrar" />

    </group>

</menu>