<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".86"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nombre_gasolinera"
            android:textSize="@dimen/textview_barra_inferior_nombre_gasolinera"
            android:text="@string/texto_barra_inferior_nombre_gasolinera"
            android:textColor="@color/editTextColorBlack"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margen_superior_nombre_gasolinera_barra_inferior"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/distancia_gasolinera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/distancia_tiempo"
                android:text="@string/distancia_gasolinera"
                android:textColor="@color/editTextColorBlack"
                />

            <TextView
                android:layout_marginLeft="@dimen/margin_left_tiempo"
                android:id="@+id/tiempo_gasolinera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/distancia_tiempo"
                android:text="@string/tiempo_gasolinera"
                android:textColor="@color/editTextColorBlack"
                />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_fab_margin"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_rating_gasolinera"
                android:src="@drawable/star_rating_4_5_of_5"
                android:layout_centerInParent="true"
                >
            </ImageView>

        </RelativeLayout>


    </LinearLayout>

    <ScrollView
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".14"
        android:layout_margin="@dimen/fab_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margen_superior_nombre_gasolinera_barra_inferior"
            >

            <TextView
                android:id="@+id/rating_gasolinera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textview_barra_inferior_nombre_gasolinera"
                android:text="@string/rating_gasolinera"
                android:textColor="@color/editTextColorBlack"
                />

            <TextView
                android:id="@+id/direccion_gasolinera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textview_barra_inferior_nombre_gasolinera"
                android:text="@string/direccion_gasolinera"
                android:textColor="@color/editTextColorBlack"
                android:layout_marginTop="@dimen/margen_superior_elementos_gasolinera"/>

            <TextView
                android:id="@+id/total_mediciones_gasolinera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textview_barra_inferior_nombre_gasolinera"
                android:text="@string/total_mediciones_gasolinera"
                android:textColor="@color/editTextColorBlack"
                android:layout_marginTop="@dimen/margen_superior_elementos_gasolinera"/>


            <LinearLayout
                android:id="@+id/contenedor_insignias"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margen_superior_elementos_gasolinera">

                <TextView
                    android:id="@+id/titulo_insignias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textview_barra_inferior_nombre_gasolinera"
                    android:text="@string/encabezado_insignias"
                    android:textColor="@color/editTextColorBlack"
                    />

                <!--<TextView
                    android:layout_marginTop="@dimen/half_fab_margin"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_insignia"
                    android:text="@string/insignia_ejemplo"
                    android:textColor="@color/editTextColorBlack"/>-->

            </LinearLayout>

        </LinearLayout>



    </ScrollView>



</LinearLayout>