<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".medicion.InformacionAdicionalMedicion">
<include layout="@layout/actionbar_toolbar"/>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/fab_margin"
        android:orientation="vertical">
        <!-- Informacion Adicional -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextBlack"
            android:layout_marginTop="@dimen/edittext_margin_createaccount">

            <android.support.design.widget.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/PrecionRegistrado"
                android:hint="@string/txtPrecio"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtBomba"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginTop="@dimen/fab_margin"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerBombas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            ></Spinner>

        <Button
            android:id="@+id/buttonEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonEnviar_Text"
            android:layout_marginTop="@dimen/fab_margin"
            android:theme="@style/RaisedButtonDark"/>
        <!--android:background="@drawable/border_button"-->
    </LinearLayout>

</ScrollView>

</android.support.design.widget.CoordinatorLayout>