<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usuarios.RegistrarUsuario">

    <include layout="@layout/actionbar_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/fab_margin"
            android:orientation="vertical">

            <!-- nombre -->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_createaccount">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/nombre_registrar_usuario"
                    android:hint="@string/hint_usuario_nombre"/>

            </android.support.design.widget.TextInputLayout>

            <!-- apellido paterno -->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_createaccount">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/apellidop_registrar_usuario"
                    android:hint="@string/hint_usuario_apellidop"/>

            </android.support.design.widget.TextInputLayout>

            <!-- apellido materno -->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_createaccount">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/apellidom_registrar_usuario"
                    android:hint="@string/hint_usuario_apellidom"/>

            </android.support.design.widget.TextInputLayout>

            <!-- email -->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_createaccount">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email_registrar_usuario"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"/>

            </android.support.design.widget.TextInputLayout>

            <!-- password -->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="@dimen/edittext_margin_createaccount">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password_registrar_usuario"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/boton_registrarUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_boton_registrar_usuario"
                    android:theme="@style/RaisedButtonDark"
                    android:onClick="registrarUsuario"/>
                <!--android:background="@drawable/border_button"-->

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:visibility="gone"
                    style="?android:attr/progressBarStyle"
                    android:layout_centerInParent="true"
                    android:indeterminate="true"
                    android:indeterminateTintMode="src_atop"
                    android:indeterminateTint="@android:color/white"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="40dp"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/mensaje_error"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="@dimen/textsize_recuperar_contra"
                    />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>