<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usuarios.AutenticarUsuario">

    <include layout="@layout/actionbar_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_horizontal_login"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_correo"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:theme="@style/EditTextBlack">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_password"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/login"
                    android:onClick="iniciarSesion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_button_login"
                    android:theme="@style/RaisedButtonDark"/>

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:visibility="gone"
                    style="?android:attr/progressBarStyle"
                    android:layout_centerInParent="true"
                    android:indeterminate="true"
                    android:indeterminateTintMode="src_atop"
                    android:indeterminateTint="@android:color/white"
                    />


            </RelativeLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="@dimen/double_fab_margin">

                    <TextView
                        android:id="@+id/dontHaveAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dont_have_account"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:textSize="@dimen/textsize_donthaveaccount"/>

                    <TextView
                        android:id="@+id/createHere"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_here"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:textSize="@dimen/textsize_donthaveaccount"
                        android:layout_toRightOf="@+id/dontHaveAccount"
                        android:onClick="crearUsuario"/>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/recuperar_contra"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recuperar_contra"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/textsize_recuperar_contra"
                        android:onClick="recuperarContrasena"/>

                    <TextView
                        android:layout_marginTop="80dp"
                        android:gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/mensaje_error"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="@dimen/textsize_recuperar_contra"
                        />

                    <!--<ProgressBar
                        android:layout_gravity="center"
                        android:id="@+id/progress_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        style="?android:attr/progressBarStyle"
                        />-->

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</android.support.design.widget.CoordinatorLayout>