<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:cardview="http://schemas.android.com/tools"
    android:id="@+id/carview_autommovil"
    android:layout_margin="@dimen/fab_margin"
    app:cardCornerRadius="@dimen/cornerradius_cardview">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_card_view_automovil">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingBottom="@dimen/fab_margin"
            android:background="@color/backgroundtext_card">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/NombreAutomovil"
                android:text="@string/nombre_automovil"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_nombre_automovil"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Marca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marca_automovil"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize_marca_automovil"
                    />

                <TextView
                    android:id="@+id/Modelo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modelo_auto"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize_marca_automovil"
                    android:layout_marginLeft="@dimen/margen_izquierdo_card_automovil"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <!--<TextView
                    android:id="@+id/likeNumberCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/likenumbercard_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstword_textsize_card"
                    android:layout_marginLeft="@dimen/timecard_marginleft_card"/>-->

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</android.support.v7.widget.CardView>